@@ -21,6 +21,7 @@ Changelog
  * Cleanup: Use `functools.partial()` instead of `django.utils.functional.curry()` (Sergey Fedoseev)
  * Squashed migrations for wagtailcore and wagtailimages (Karl Hobley)
  * Added `before_move_page` and `after_move_page` hooks (Maylon Pedroso)
+ * Bulk deletion button for snippets is now hidden until items are selected (Karl Hobley)
  * Fix: Query objects returned from `PageQuerySet.type_q` can now be merged with `|` (Brady Moe)
  * Fix: Add `rel="noopener noreferrer"` to target blank links (Anselm Bradford)
  * Fix: Additional fields on custom document models now show on the multiple document upload view (Robert Rollins, Sergey Fedoseev)
